Integrate Supabase for auth and history

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
+    "@supabase/supabase-js": "^2.89.0",
     "jspdf": "2.5.1",
     "mammoth": "1.8.0",
     "pdfjs-dist": "4.10.38",
